refactor: Clean up whitespace and formatting in product verification classes